Acabado do header e inicio da barra de pesquisas

--- a/TP_10355_11156/HTML/GenericHTML.html
+++ b/TP_10355_11156/HTML/GenericHTML.html
@@ -13,13 +13,13 @@
 
   <header>
     <section>
-        <img src="../Media/video.png" alt="icon_video" style="width:38px;height:38px;"> <!-- hex #52FFA8 --> 
+        <img src="../Media/video.png" alt="icon_video" style="width:35px;height:35px;"> <!-- hex #52FFA8 --> 
       <h1>
         Multimédia IPCA
       </h1>
     </section>
 
-    <section class="sideleft">
+    <section class="headerSideRight">
       <h1>
         Kyrylo Yavorenko a10355
         <br/> Rúben Guimarães a11156
@@ -30,17 +30,43 @@
 
     </section>
 
-
-
   </header>
 
+  <!-- Main box of the page-->
+  <section class="main">
 
+    <!-- Search box-->
+    <div class="searchBox">
 
-  <hr>
-  <!-- Separador linha-->
+      <h1> GIF's everywhere</h1>
 
+      <div class="search">
+          <input type="text" placeholder="Search gifs!">
+          <button type="submit" title="Pesquisa">Search</button>
+        </div> 
 
-  <p1>Texto</p1>
+    </div>
+
+    <!-- gif show area-->
+    <div class="gifBox">
+
+    </div>
+
+  </section>
+
+  <footer>
+
+    <div class="infoBox">
+
+    </div>
+
+    <div class="socialBox">
+
+    </div>
+
+  </footer>
+
+  
 </body>
 
 </html>
