Algumas melhorias na search bar
- Correcção de um ponto no header (adicão de link para o site do IPCA)
- Finalização do design da search bar

--- a/TP_10355_11156/HTML/GenericHTML.html
+++ b/TP_10355_11156/HTML/GenericHTML.html
@@ -14,9 +14,9 @@
   <header>
     <section>
         <img src="../Media/video.png" alt="icon_video" style="width:35px;height:35px;"> <!-- hex #52FFA8 --> 
-      <h1>
-        Multimédia IPCA
-      </h1>
+
+        <a href="https://ipca.pt/"> <b>Multimédia IPCA</b> </a> 
+
     </section>
 
     <section class="headerSideRight">
@@ -41,8 +41,8 @@
       <h1> GIF's everywhere</h1>
 
       <div class="search">
-          <input type="text" placeholder="Search gifs!">
-          <button type="submit" title="Pesquisa">Search</button>
+          <input class="searchBar" type="text" placeholder="Search gifs!">
+          <button class="searchButton" type="submit" title="Pesquisa"> <img src="../Media/find.png" alt="find" style="width:15px;height:15px;"> Search </button>
         </div> 
 
     </div>
@@ -53,6 +53,7 @@
     </div>
 
   </section>
+
 
   <footer>
 
