--- a/TP_10355_11156/HTML/GenericHTML.html
+++ b/TP_10355_11156/HTML/GenericHTML.html
@@ -39,29 +39,52 @@
   <section class="main">
 
     <!-- Search box-->
-    <div class="searchBox">
+    <section class="searchBox">
+      <!-- nav ? -->
 
       <h1> GIF's everywhere</h1>
 
-      <div class="search">
+      <div class="search" >
         <input class="searchBar" type="text" placeholder="Search gifs!">
-        <button class="searchButton" type="submit" title="Pesquisa">
+        <button class="searchButton" type="submit" title="Search">
           <img src="../Media/find.png" alt="find" style="width:15px;height:15px;"> Search </button>
       </div>
 
-    </div>
+    </section>
 
-    <!-- gif show area-->
-    <div class="gifBox">
+    <!-- gif  area-->
+    <section class="gifBox">
 
-    </div>
+      
+      <!-- gif Buttons-->
+      <div class="gifButtons">
+
+        <button class="refreshButton" type="submit" title="Refresh">
+          <img src="../Media/refresh.png" alt="find" style="width:30px;height:30px;"> </button>
+
+        <button class="trendingButton" type="submit" title="trending"> Trending </button>
+
+        <button class="sportsButton" type="submit" title="Sports"> Sports </button>
+
+        <button class="funnyButton" type="submit" title="Funny"> Funny </button>
+
+      </div>
+
+      <!-- Box where the gif's will appear-->
+      <div class="gifShowBox">
+
+
+      </div>
+
+
+    </section>
 
   </section>
 
 
   <footer>
 
-    <div class="infoBox">
+    <section class="infoBox">
 
       <div class="info">
         <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24">
@@ -100,10 +123,10 @@
         </svg>
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">FAQ's</a>
       </div>
-    </div>
+    </section>
 
 
-    <div class="socialBox">
+    <section class="socialBox">
 
       <div class="social">
         <a href="https://www.facebook.com/IPCA.Instituto.Politecnico/">
@@ -130,9 +153,9 @@
         <p>Copyright all right reserved by Multimédia IPCA </p>
       </div>
 
-    </div>
+    </section>
 
-    <!---onda do footer-->
+    <!--- footer wave -->
     <svg viewBox="0 -20 700 110" width="100%" height="110" preserveAspectRatio="none">
       <path transform="translate(0, -20)" d="M0,10 c80,-22 240,0 350,18 c90,17 260,7.5 350,-20 v50 h-700" fill="#52FFA8" />
       <path d="M0,10 c80,-18 230,-12 350,7 c80,13 260,17 350,-5 v100 h-700z" fill="#333333" />
@@ -140,7 +163,8 @@
 
   </footer>
 
-
+  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="../JS/script.js"></script> <!-- Load js script -->
 </body>
 
 </html>
