Pesquisa de Gif's e a obtenção do JSON

--- a/TP_10355_11156/HTML/GenericHTML.html
+++ b/TP_10355_11156/HTML/GenericHTML.html
@@ -39,7 +39,7 @@
   <section class="main">
 
     <!-- Search box-->
-    <section class="searchBox">
+    <div class="searchBox">
       <!-- nav ? -->
 
       <h1> GIF's everywhere</h1>
@@ -50,10 +50,10 @@
           <img src="../Media/find.png" alt="find" style="width:15px;height:15px;"> Search </button>
       </div>
 
-    </section>
+    </div>
 
     <!-- gif  area-->
-    <section class="gifBox">
+    <div class="gifBox">
 
       
       <!-- gif Buttons-->
@@ -72,12 +72,11 @@
 
       <!-- Box where the gif's will appear-->
       <div class="gifShowBox">
-
-
+        
       </div>
 
 
-    </section>
+    </div>
 
   </section>
 
