Finalização do scrip em JS
- Random Gif's
- Botões dos Gif's
- Problemas em mostrar os Gif's
- GG

--- a/TP_10355_11156/HTML/GenericHTML.html
+++ b/TP_10355_11156/HTML/GenericHTML.html
@@ -162,7 +162,7 @@
 
   </footer>
 
-  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="http://code.jquery.com/jquery-latest.min.js"></script> <!-- Load jQuery -->
   <script src="../JS/script.js"></script> <!-- Load js script -->
 </body>
 
