--- a/TP_10355_11156/HTML/GenericHTML.html
+++ b/TP_10355_11156/HTML/GenericHTML.html
@@ -44,7 +44,7 @@
 
       <h1> GIF's everywhere</h1>
 
-      <div class="search" >
+      <div class="search">
         <input class="searchBar" type="text" placeholder="Search gifs!">
         <button class="searchButton" type="submit" title="Search">
           <img src="../Media/find.png" alt="find" style="width:15px;height:15px;"> Search </button>
@@ -55,7 +55,7 @@
     <!-- gif  area-->
     <div class="gifBox">
 
-      
+
       <!-- gif Buttons-->
       <div class="gifButtons">
 
@@ -72,7 +72,7 @@
 
       <!-- Box where the gif's will appear-->
       <div class="gifShowBox">
-        
+
       </div>
 
 
@@ -162,9 +162,11 @@
 
   </footer>
 
-  <script src="http://code.jquery.com/jquery-latest.min.js"></script> <!-- Load jQuery -->
-  <script src="../JS/script.js"></script> <!-- Load js script -->
-  
+  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <!-- Load jQuery -->
+  <script src="../JS/script.js"></script>
+  <!-- Load js script -->
+
 </body>
 
 </html>
