--- a/TP_10355_11156/HTML/GenericHTML.html
+++ b/TP_10355_11156/HTML/GenericHTML.html
@@ -155,7 +155,7 @@
     </section>
 
     <!--- footer wave -->
-    <svg viewBox="0 -20 700 110" width="100%" height="110" preserveAspectRatio="none">
+    <svg class="wave" viewBox="0 -20 700 110" width="100%" height="115px" preserveAspectRatio="none">
       <path transform="translate(0, -20)" d="M0,10 c80,-22 240,0 350,18 c90,17 260,7.5 350,-20 v50 h-700" fill="#52FFA8" />
       <path d="M0,10 c80,-18 230,-12 350,7 c80,13 260,17 350,-5 v100 h-700z" fill="#333333" />
     </svg>
