--- a/TP_10355_11156/HTML/GenericHTML.html
+++ b/TP_10355_11156/HTML/GenericHTML.html
@@ -47,7 +47,7 @@
       <div class="search">
         <input class="searchBar" type="text" placeholder="Search gifs!">
         <button class="searchButton" type="submit" title="Search">
-          <img src="../Media/find.png" alt="find" style="width:15px;height:15px;"> Search </button>
+          <img src="../Media/find.png" alt="find" > Search </button>
       </div>
 
     </div>
@@ -60,7 +60,7 @@
       <div class="gifButtons">
 
         <button class="refreshButton" type="submit" title="Refresh">
-          <img src="../Media/refresh.png" alt="find" style="width:30px;height:30px;"> </button>
+          <img src="../Media/refresh.png" alt="find" > </button>
 
         <button class="trendingButton" type="submit" title="trending"> Trending </button>
 
