Correcçao da ligação do frontend e backend

--- a/TP2_10355_11156/FrontEnd/HTML/GenericHTML.html
+++ b/TP2_10355_11156/FrontEnd/HTML/GenericHTML.html
@@ -62,11 +62,11 @@
         <button class="refreshButton" type="submit" title="Refresh">
           <img src="../Media/refresh.png" alt="find" > </button>
 
-        <button class="trendingButton" type="submit" title="trending"> Trending </button>
+        <button class="trendingButton" type="submit" ></button>
 
-        <button class="sportsButton" type="submit" title="Sports"> Sports </button>
+        <button class="sportsButton" type="submit" ></button>
 
-        <button class="funnyButton" type="submit" title="Funny"> Funny </button>
+        <button class="funnyButton" type="submit" ></button>
 
       </div>
 
