--- a/TP2_10355_11156/FrontEnd/HTML/GenericHTML.html
+++ b/TP2_10355_11156/FrontEnd/HTML/GenericHTML.html
@@ -68,6 +68,10 @@
 
         <button class="funnyButton" type="submit" ></button>
 
+        <button class="addGif" type="submit" > Add Gif </button>
+        
+        <button class="addCategory" type="submit" > Add Category </button>
+
       </div>
 
       <!-- Box where the gif's will appear-->
