--- a/TP2_10355_11156/FrontEnd/HTML/GenericHTML.html
+++ b/TP2_10355_11156/FrontEnd/HTML/GenericHTML.html
@@ -62,15 +62,9 @@
         <button class="refreshButton" type="submit" title="Refresh">
           <img src="../Media/refresh.png" alt="find" > </button>
 
-        <button class="trendingButton" type="submit" ></button>
-
-        <button class="sportsButton" type="submit" ></button>
-
-        <button class="funnyButton" type="submit" ></button>
-
-        <button class="addGif" type="submit" > Add Gif </button>
+        <button class="addGif" type="submit" onclick="location.href='AddGif.html'" > Add Gif </button>
         
-        <button class="addCategory" type="submit" > Add Category </button>
+        <button class="addCategory" type="submit" onclick="location.href='AddCategory.html'"  > Add Category </button>
 
       </div>
 
