--- a/TP2_10355_11156/FrontEnd/HTML/AddCategory.html
+++ b/TP2_10355_11156/FrontEnd/HTML/AddCategory.html
@@ -141,7 +141,7 @@
 
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <!-- Load jQuery -->
-    <script src="../JS/script.js"></script>
+    <script src="../JS/scriptAddCategory.js"></script>
     <!-- Load js script -->
 
 </body>
