--- a/TP2_10355_11156/FrontEnd/HTML/AddGif.html
+++ b/TP2_10355_11156/FrontEnd/HTML/AddGif.html
@@ -146,7 +146,7 @@
 
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   <!-- Load jQuery -->
-  <script src="../JS/script.js"></script>
+  <script src="../JS/scriptAddGif.js"></script>
   <!-- Load js script -->
 
 </body>
